--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,6 +21,10 @@ jobs:
     - name: clone external repos
       run: git clone https://github.com/raspberrypi/userland && git clone https://github.com/clockworkpi/uConsole.git && git clone https://github.com/cuu/skel.git 
 # && git clone https://github.com/raspberrypi/linux.git
+    - name: Patch kernel
+      run: cd linux && git apply ../uConsole/Code/patch/cm4/20230630/0001-patch-cm4.patch && cd ..
+    - name: Cross-compile kernel 
+      run: cd linux && export ARCH=arm64 && make V=1 bcm2711_defconfig && make V=1 -j2
     - name: Create installer.bin
       run: truncate -s 32768M installer.bin
     - name: Create loopback device
