--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,15 +17,32 @@ jobs:
       id: date
       run: echo "stamp=$(date '+%s')" >> $GITHUB_ENV
     - name: Install tools
-      run: sudo apt update ; sudo apt -y install gcc-aarch64-linux-gnu device-tree-compiler python-is-python3 python3-pip exfatprogs parted exfat-fuse binfmt-support qemu-user-static
+      run: |
+        sudo apt update 
+        sudo apt -y install ccache gcc-aarch64-linux-gnu device-tree-compiler python-is-python3 python3-pip exfatprogs parted exfat-fuse binfmt-support qemu-user-static
     - name: clone external repos
-      run: curl -L git.io/antigen > antigen.zsh && git clone https://github.com/syl20bnr/spacemacs && git clone https://github.com/raspberrypi/userland && git clone https://github.com/clockworkpi/uConsole.git && git clone https://github.com/cuu/skel.git 
+      run: |
+        curl -L git.io/antigen > antigen.zsh 
+        git clone https://github.com/syl20bnr/spacemacs 
+        git clone https://github.com/raspberrypi/userland 
+        git clone https://github.com/clockworkpi/uConsole.git 
+        git clone https://github.com/cuu/skel.git 
     - name: delete git directories 
-      run: rm -rf antigen/.git && rm -rf spacemacs/.git && rm -rf userland/.git && rm -rf uConsole/.git && rm -rf skel/.git 
+      run: |
+        rm -rf antigen/.git 
+        rm -rf spacemacs/.git 
+        rm -rf userland/.git 
+        rm -rf uConsole/.git 
+        rm -rf skel/.git 
     - name: Setup CCache
       uses: hendrikmuhs/ccache-action@v1.2
-    - name: Cross-compile kernel 
-      run: cd linux && make KERNEL=kernel8 ARCH=arm64 CROSS_COMPILE=aarch64-linux-gnu- V=1 bcm2711_defconfig && make KERNEL=kernel8 ARCH=arm64 CROSS_COMPILE=aarch64-linux-gnu- V=1 -j2 && make KERNEL=kernel8 ARCH=arm64 CROSS_COMPILE=aarch64-linux-gnu- V=1 -j2 dtbs
+    - name: Cross-compile kernel
+      working-directory: linux
+      run: |
+        scripts/config -e CONFIG_BTRFS_FS
+        make KERNEL=kernel8 ARCH=arm64 CROSS_COMPILE=aarch64-linux-gnu- V=1 bcm2711_defconfig 
+        make KERNEL=kernel8 ARCH=arm64 CROSS_COMPILE=aarch64-linux-gnu- V=1 -j2 
+        make KERNEL=kernel8 ARCH=arm64 CROSS_COMPILE=aarch64-linux-gnu- V=1 -j2 dtbs
     - name: Create installer.bin
       run: truncate -s 7946M installer.bin
     - name: Create loopback device
@@ -43,7 +60,7 @@ jobs:
     - name: Create BOOT filesystem
       run: sudo mkfs.vfat -F32 /dev/loop254p1
     - name: Create SYSTEM filesystem
-      run: sudo mkfs.ext4 /dev/loop254p2
+      run: sudo mkfs.btrfs /dev/loop254p2
     - name: Mount SYSTEM filesystem
       run: sudo mount /dev/loop254p2 /mnt/
     - name: Mount BOOT filesystem
