--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -47,6 +47,7 @@ jobs:
         scripts/config -d CONFIG_HZ_300
         scripts/config -e CONFIG_HZ_1000
         scripts/config -e CONFIG_NO_HZ_FULL
+        scripts/config -e CONFIG_CRASH_DUMP
         make KERNEL=kernel8 ARCH=arm64 CROSS_COMPILE=aarch64-linux-gnu- V=1 -j2 
         make KERNEL=kernel8 ARCH=arm64 CROSS_COMPILE=aarch64-linux-gnu- V=1 -j2 dtbs
     - name: Create installer.bin
