--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,7 +20,7 @@ jobs:
         sudo apt -y install p7zip-full ccache gcc-aarch64-linux-gnu device-tree-compiler python-is-python3 python3-pip exfatprogs parted exfat-fuse binfmt-support qemu-user-static
     - name: clone external repos
       run: |
-        https://raw.githubusercontent.com/raspberrypi/rpi-update/master/rpi-update
+        wget https://raw.githubusercontent.com/raspberrypi/rpi-update/master/rpi-update
         git clone https://github.com/raspberrypi/userland
         git clone https://github.com/syl20bnr/spacemacs emacs
     - name: delete git directories
