copy hosts and hostname from new location

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -85,16 +85,10 @@ jobs:
       run: docker rm rpi-image ; docker rmi voidlinux/voidlinux:latest
     - name: Delete QEMU BINFMT shim
       run: sudo rm -rf /mnt/usr/bin/qemu-aarch64-static
-    - name: Home directory
-      run: sudo mkdir -p /mnt/home/pi/.ssh
-    - name: authorized_keys empty file
-      run: sudo touch /mnt/home/pi/.ssh/authorized_keys
-    - name: Create empty machine-id
-      run: sudo touch /mnt/etc/machine-id
     - name: Copy hosts file
-      run: sudo cp hosts /mnt/etc
+      run: sudo cp config/etc/hosts /mnt/etc
     - name: Copy hostname file
-      run: sudo cp hostname /mnt/etc
+      run: sudo cp config/etc/hostname /mnt/etc
     - name: Unmount
       run: sudo sync && sudo sync && sudo umount /mnt/boot && sudo umount /mnt
     - name: Disconnect installer.bin
