--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -138,7 +138,7 @@ jobs:
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
         asset_path: linux/linux-6.6.51-v8-arm64.tar.xz
-        asset_name: linux/linux-6.6.51-v8-arm64.tar.xz
+        asset_name: linux-6.6.51-v8-arm64.tar.xz
         asset_content_type: application/x-tar+xz
     - name: Upload kernel headers tarball
       uses: actions/upload-release-asset@v1
